crates/tuna/tests/parser/fail/primitive-kw-selector.som
"test:
fail: true
"

"`primitive` is not a legal keyword"
PrimitiveKwSelector = (
  test = (
    #this #is #wrong: #primitive:
  )
)
